app/svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dominio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blue.cka-training-dev.public.cka.compwave.com.br
    http:
      paths:
        - backend:
            serviceName: blue-service
            servicePort: 80
